welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value len
	for(i<-0 to len(nums)-1){
                    ^indexOfValue:9: error: type mismatch;
 found   : Unit
 required: Int
  if(ok==0){
  ^